Comentários pubspec imagens

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,7 +64,7 @@ flutter:
      - images/funghi.jpg
      - images/salamino.jpg
      - images/prosciutto.jpg
-     - images/focaccia.jpg
+     - images/focaccia.jpg # declarando as imagens para serem encontradas pelo arquivo
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
